# litclock

./: README.md  display_manager.py  e_ink_display_manager.py  epd13in3_test.py  example.py  grayscale_example.py  partial_refresh_example.py  pyproject.toml  quote_clock.service  quote_generator.py  requirements-dev.txt  requirements.txt  run.sh  run_board.sh  run_epd_test.sh  run_tests.py  setup.py  test_e_paper.py  test_e_paper_board.py  test_init_only.py  test_pins.py  web_server.py
templates/: index.html
tests/: __init__.py  mock_config.py  mock_rpi.py  mock_spi.py  mock_spidev.py  spidev.py  test_display_manager.py  test_quote_generator.py  test_web_server.py
tests/RPi/: GPIO.py  __init__.py
tests/RPi/GPIO/: GPIO.py  __init__.py
utils/: epd13in3_test.py
